[package]
name = "first_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
substring = "1.4.5"
wasm-bindgen = "0.2.90"
web-sys = "0.3.67"
yew = { version = "0.21.0", features = ["csr"] }
